@@ -255,9 +255,10 @@ class nggGallery {
 	* @autor John Godley
 	* @param string $template_name Name of the template file (without extension)
 	* @param string $vars Array of variable name=>value that is available to the display code (optional)
+	* @param bool $callback In case we check we didn't find template we tested it one time more (optional)
 	* @return void
 	**/
-	function render($template_name, $vars = array ()) {
+	function render($template_name, $vars = array (), $callback = false) {
 		foreach ($vars AS $key => $val) {
 			$$key = $val;
 		}
@@ -271,8 +272,12 @@ class nggGallery {
 			include (STYLESHEETPATH . "/nggallery/$template_name.php");
 		} else if (file_exists (NGGALLERY_ABSPATH . "/view/$template_name.php")) {
 			include (NGGALLERY_ABSPATH . "/view/$template_name.php");
+		} else if ( $callback === true ) {
+            echo "<p>Rendering of template $template_name.php failed</p>";		  
 		} else {
-			echo "<p>Rendering of template $template_name.php failed</p>";
+            //test without the "-template" name one time more
+            $template_name = array_shift( explode('-', $template_name , 2) );
+            nggGallery::render ($template_name, $vars , true);
 		}
 	}
 	
